projects/taskflowpro/backend/k8s-config/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend
  namespace: tfp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - image: registry.coherent.in/tfp-backend-api:32
          resources:
            requests:
              cpu: "100m"
              memory: "200Mi"
            limits:
              cpu: "200"
              memory: "400Mi"
          imagePullPolicy: Always
          name: backend
      imagePullSecrets:
        - name: registry-regcred
